// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders correctly 1`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#a3a6ac",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#d9dbdf",
        "borderBottomWidth": 0.8,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=""
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      scrollEnabled={false}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "top",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 2`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#a3a6ac",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#d9dbdf",
        "borderBottomWidth": 0.8,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      scrollEnabled={false}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "top",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 3`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#a3a6ac",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#d9dbdf",
        "borderBottomWidth": 0.8,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      scrollEnabled={false}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "top",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
          Object {
            "color": "#a3a6ac",
            "height": 48.75,
          },
        ]
      }
    >
      <View
        override={
          Object {
            "fill": "#a3a6ac",
            "height": 20,
            "width": 20,
          }
        }
        xml={
          Object {
            "testUri": "../../../lib/src/icons/email.svg",
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 4`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#a3a6ac",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#d9dbdf",
        "borderBottomWidth": 0.8,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      placeholderTextColor="#a3a6ac"
      rejectResponderTermination={true}
      scrollEnabled={false}
      style={
        Object {
          "color": "#a3a6ac",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "top",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
          Object {
            "color": "#a3a6ac",
            "height": 48.75,
          },
        ]
      }
    >
      <View
        override={
          Object {
            "fill": "#a3a6ac",
            "height": 20,
            "width": 20,
          }
        }
        xml={
          Object {
            "testUri": "../../../lib/src/icons/email.svg",
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 5`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#de350b",
        "borderBottomWidth": 0.8,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      placeholderTextColor="#a3a6ac"
      rejectResponderTermination={true}
      scrollEnabled={false}
      style={
        Object {
          "color": "#a3a6ac",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "top",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
          Object {
            "color": "#a3a6ac",
            "height": 48.75,
          },
        ]
      }
    >
      <View
        override={
          Object {
            "fill": "#de350b",
            "height": 20,
            "width": 20,
          }
        }
        xml={
          Object {
            "testUri": "../../../lib/src/icons/email.svg",
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  >
    error
  </Text>
</View>
`;
